syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

message Event {
    string id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    google.protobuf.Timestamp deleted_at = 4;
    google.protobuf.Timestamp occurs_at = 5;
    string subject = 6;
    string body = 7;
    message alertBefore {
        enum BeforeType {
            DAYS = 0;
            HOURS = 1;
            MINUTES = 2;
        }
        BeforeType type = 1;
        int64 before = 2;
    }
    int64 duration = 8;
    string location = 9;
    User user = 10;
}

message User {
    string id = 1;
    string name = 2;
    repeated string email = 3;
    repeated string mobile = 4;
    google.protobuf.Timestamp birthday = 5;
}